The Grinder 3.8 (Not yet released)
----------------------------------

  Fix bug 3471476 - Null Pointer Exception in the TCPProxy when making
  multiple connections through a chained HTTPS proxy. Thanks to Tadge
  for the report and testing.

  Fix bug 3484390 - FireFox 10 and HTTPS triggers a
  NullPointerException. Thanks to Ouray Viney for the report and
  testing.


The Grinder 3.7.1
-----------------

  Fix bug 3479712 - Data log is not flushed on exit. Thanks to Andreas
  for the report.


The Grinder 3.7
---------------

  Changes that may be incompatible with existing scripts:

   Implement feature request 3418525 - Switch to a standard logging
   framework. The net.grinder.common.Logger/FilenameFactory API has
   been removed in favor of SLF4J. Output and error messages are
   logged to a single log file. The log file and the data log file are
   managed by Logback.

   The Grinder requires Java SE 6 ("Java 6") or later. Java SE 5 is no
   longer supported.

  Other changes:

   The Java instrumenter supports selective instrumentation of a
   target object through an overloaded version of Test.record(). The
   full HTTPRequest interface can be used with DCR instrumentation
   without requiring a replacement for the traditional instrumenter's
   __target__.

   Fix bug 3006631 - Null pointer exception when posting multipart
   form data. Thanks to Edwin Clubb for the report, and to Ouray Viney
   for testing the fix.

   Fix bug 3431764 - DCR instrumentation fails with Java 7. Thanks to
   Gary Mulder for the report.

   Fix bug 3133650 - Relative classpath issues when using the console.
   The agent process translates relative paths in the classpath to the
   different working directory when workers are launched with scripts
   distributed by the console. Thanks to Jared C for the report.

   The Grinder is built using Apache Maven.

   Tentative fix for bug 3459637 - AWT-EventQueue NullPointerException.
   Thanks to Richard Lynch for the report.
